kubernetes/bankapp-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bankapp-ns
  labels:
    name: bankapp-ns
