kubernetes/bankapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp-deploy
  namespace: bankapp-ns
  labels:
    app: bankapp-deploy

spec:
  replicas: 3
  selector:
    matchLabels:
      app: bankapp-deploy
  template:
    metadata:
      labels:
        app: bankapp-deploy
    spec:
      containers:
        - name: bankapp
          image: niki0303/bankapp:latest
          ports:
            - containerPort: 8080
          resources: # may be using while HPA - the scheduler to place the pod on a node,
            limits: # while limits cap the maximum CPU the container can consume at runtime
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "250m"
