kubernetes/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: bankapp-ns
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"      
        volumeMounts:
          - name: mysql-data
            mountPath: /var/lib/mysql

      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
